# budgie-webcam-applet

./: .gitignore  CONTRIBUTING.md  README.md  meson.build  meson_options.txt
data/: budgie-webcam-whitebalance.plugin  io.grnbk.webcamapplet.gschema.xml  io.grnbk.webcamwhitebalance.gschema.xml  meson.build  webcam_whitebalance.plugin  webcamapplet.plugin  webcamwhitebalance.plugin
debian/: changelog  control  copyright  debhelper-build-stamp  files  install  postinst  postrm
src/: WebcamApplet.vala  WebcamAppletSettings.vala  WebcamAppletWindow.vala  WebcamWhitebalanceApplet.vala  WebcamWhitebalanceSettings.vala  WebcamWhitebalanceWindow.vala  budgie-webcam-whitebalance.vala  ioctl_wrapper.c  ioctl_wrapper.h  meson.build  webcam_whitebalance.vala
vapi/: ioctl_wrapper.vapi  v4l2.vapi
