install_data('webcamapplet.plugin',
  install_dir: PLUGINS_INSTALL_DIR
)

install_data('io.grnbk.webcamapplet.gschema.xml',
  install_dir: join_paths(get_option('datadir'), 'glib-2.0', 'schemas')
)

install_data(
  'webcam-colorbalance.svg',
  'webcam-disabled.svg',
  'webcam-enabled.svg',
  'webcam-exposure.svg',
  'webcam-miscsettings.svg',
  'webcam-orientation.svg',
  'webcam-zoomfocus.svg',
  install_dir : join_paths(get_option('datadir'), 'icons', 'hicolor', '16x16', 'status')
)
